tests/trybuild/duration_fail.stderr
error: failed to parse duration string: expected number at 0
 --> tests/trybuild/duration_fail.rs:5:39
  |
5 | const _DURATION: Duration = duration!("not-a-duration");
  |                                       ^^^^^^^^^^^^^^^^
