tests/trybuild/duration_fail.rs
use std::time::Duration;

use lits::duration;

const _DURATION: Duration = duration!("not-a-duration");

fn main() {}
